# kickerino

./: README.md  index.html  kickerino.code-workspace  package-lock.json  package.json
.agents/: AGENTS.md
.github/workflows/: release.yml
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  support-worker.json
src-tauri/permissions/: kickerino-commands.toml  log-message.toml
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: ChannelAvatar.tsx  ChannelCard.tsx  ChannelList.tsx  ChannelTabs.tsx  ConfirmModal.tsx  HelpModal.tsx  KickAccountModal.tsx  SettingsPanel.tsx  SoundTimersDashboard.tsx  StatusBadge.tsx  SupportMessagesDashboard.tsx
src/components/reciprocity/: BlockedUserManager.tsx  FriendDetails.tsx  FriendManager.tsx  ReciprocityDashboard.tsx  ReciprocitySettingsPanel.tsx
src/hooks/: useChannels.ts  useLiveMonitor.ts  useReciprocity.ts  useSettings.ts  useSoundTimers.ts  useSupportBot.ts
src/services/: kickApi.ts  live.ts  notifications.ts  reciprocityStorage.ts  sound.ts  storage.ts  updates.ts
src/types/: channel.ts  reciprocity.ts  settings.ts  timer.ts
