[package]
name = "kickerino"
version = "0.9.9-19"
description = "Cliente desktop leve para acompanhar canais da Kick."
authors = ["athilalexandre"]
edition = "2021"

[lib]
name = "kickerino_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rfd = "0.17.2"
rodio = { version = "0.22", features = ["playback", "mp3", "wav", "vorbis", "flac"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["time"] }

